更新功能 0523 7